src/test/testData/parser/good/FlowFor.basic
For(A,1,length(Str0
    2->A
End
For(A,10,~8,~1)
    2->A